examples/datalog/09_recursion/24_shortest_path_len.dl
% Test: Shortest path length
% Expected: Can compute shortest path length
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_shortest
.kg use test_shortest

% Graph with multiple paths from 1 to 5
+edge[(1, 2), (2, 3), (3, 5), (1, 4), (4, 5)].

% Path with length
+path_len(X, Y, 1) :- edge(X, Y).
+path_len(X, Z, L) :- path_len(X, Y, L1), edge(Y, Z), L = L1 + 1.

?- path_len(X, Y, Len).

% Shortest path length
+shortest(X, Y, <MIN:L>) :- path_len(X, Y, L).

?- shortest(1, 5, Len).

.kg use default
.kg drop test_shortest
